--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -12,6 +12,7 @@ set_real_ip_from 103.251.167.20;
 set_real_ip_from 104.167.242.116;
 set_real_ip_from 104.167.242.117;
 set_real_ip_from 104.167.242.118;
+set_real_ip_from 104.168.144.253;
 set_real_ip_from 104.192.3.74;
 set_real_ip_from 104.219.236.100;
 set_real_ip_from 104.244.72.115;
@@ -807,7 +808,6 @@ set_real_ip_from 2001:bc8:1640:317d:dc00:ff:fe39:7bb3;
 set_real_ip_from 2001:bf0:666::666;
 set_real_ip_from 2001:df7:7e80:100:9f2b:1d15:c713:52ad;
 set_real_ip_from 202.182.99.129;
-set_real_ip_from 202.61.226.98;
 set_real_ip_from 204.137.14.104;
 set_real_ip_from 204.137.14.105;
 set_real_ip_from 204.137.14.106;
@@ -1033,6 +1033,7 @@ set_real_ip_from 2607:5300:205:200::4894;
 set_real_ip_from 2607:5300:60:566f::1;
 set_real_ip_from 2607:5300:61:785::;
 set_real_ip_from 2607:5300:61:785:1:2:3:4;
+set_real_ip_from 2607:5501:3000:1dc::2;
 set_real_ip_from 2607:f130:0:ed:216:3cff:febd:3b42;
 set_real_ip_from 2607:f530:8002::19;
 set_real_ip_from 2620:18c:0:192::171;
@@ -1099,7 +1100,6 @@ set_real_ip_from 2a03:4000:37:3:e842:2ff:feb9:c49c;
 set_real_ip_from 2a03:4000:46:197:b434:d3ff:fe68:d9e1;
 set_real_ip_from 2a03:4000:48:4d:88c8:8eff:fee8:9d1a;
 set_real_ip_from 2a03:4000:5:65b:388a:15ff:fedc:30d6;
-set_real_ip_from 2a03:4000:56:91:480a:eeff:fea8:f9c6;
 set_real_ip_from 2a03:4000:6:102b:c457:f3ff:feb0:a6d0;
 set_real_ip_from 2a03:4000:62:8:c855:23ff:fef6:50ee;
 set_real_ip_from 2a03:4000:6:614:d803:40ff:fec3:832a;
@@ -1648,6 +1648,7 @@ set_real_ip_from 80.94.92.92;
 set_real_ip_from 81.16.33.42;
 set_real_ip_from 81.17.28.95;
 set_real_ip_from 81.56.50.166;
+set_real_ip_from 82.153.138.17;
 set_real_ip_from 82.197.182.161;
 set_real_ip_from 82.221.128.191;
 set_real_ip_from 82.221.131.5;
