--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -130,6 +130,7 @@ deny 136.244.111.163;
 deny 138.59.18.110;
 deny 139.99.172.11;
 deny 139.99.8.57;
+deny 141.147.97.190;
 deny 141.164.38.67;
 deny 141.98.11.62;
 deny 142.171.12.88;
@@ -149,6 +150,7 @@ deny 149.202.79.101;
 deny 149.202.79.129;
 deny 149.56.22.133;
 deny 149.56.44.47;
+deny 151.236.24.17;
 deny 152.53.133.14;
 deny 152.53.53.243;
 deny 154.16.116.61;
@@ -158,6 +160,7 @@ deny 156.229.232.104;
 deny 156.229.232.108;
 deny 156.229.232.115;
 deny 156.229.232.54;
+deny 156.229.232.98;
 deny 156.229.233.92;
 deny 158.220.123.219;
 deny 158.69.252.116;
@@ -231,7 +234,7 @@ deny 178.218.144.51;
 deny 178.218.144.64;
 deny 178.218.144.96;
 deny 178.218.144.99;
-deny 178.29.144.230;
+deny 178.30.244.116;
 deny 179.35.8.115;
 deny 179.43.128.16;
 deny 179.43.159.194;
@@ -1118,6 +1121,7 @@ deny 2a03:e600:100::68;
 deny 2a03:e600:100::69;
 deny 2a03:e600:100::70;
 deny 2a03:e600:100::71;
+deny 2a03:f80:354:643f::1;
 deny 2a04:52c0:101:46a::;
 deny 2a04:52c0:102:46e0::1;
 deny 2a04:52c0:103:412::1;
@@ -1126,7 +1130,6 @@ deny 2a04:52c0:104:31e6::1;
 deny 2a04:52c0:104:4735::1;
 deny 2a04:52c0:104:ad97::1;
 deny 2a04:52c0:105:98a3::1;
-deny 2a04:52c0:105:d7eb::1;
 deny 2a04:52c0:106:d219::1;
 deny 2a04:52c0:108:a34f::1;
 deny 2a04:52c0:116:e0e3::1;
@@ -1144,6 +1147,7 @@ deny 2a05:b0c7:6388::1;
 deny 2a05:b0c7:655b::1;
 deny 2a05:b0c7:67c6::1;
 deny 2a05:b0c7:6949::1;
+deny 2a05:b0c7:6bd4::1;
 deny 2a05:b0c7:6cc4::1;
 deny 2a05:d014:1527:3400:fffe:9986:ac97:faeb;
 deny 2a05:f480:2800:1ee1:5400:5ff:fe16:c47a;
@@ -1367,7 +1371,6 @@ deny 2a0c:5700:3133:4000:be24:11ff:fe51:a829;
 deny 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 deny 2a0c:5cc0:1:1::293c:1518;
 deny 2a0c:e300::23;
-deny 2a0d:8140:1fff:4a9a::1;
 deny 2a0d:bbc7:0:1::1df;
 deny 2a0d:bbc7:0:1::254;
 deny 2a0d:bbc7:0:1::320;
@@ -1489,7 +1492,6 @@ deny 45.12.3.80;
 deny 45.128.133.242;
 deny 45.132.246.245;
 deny 45.134.225.36;
-deny 45.137.99.14;
 deny 45.138.16.107;
 deny 45.138.16.113;
 deny 45.138.16.178;
@@ -1548,7 +1550,6 @@ deny 45.80.158.27;
 deny 45.80.158.69;
 deny 45.8.22.207;
 deny 45.83.104.137;
-deny 45.83.21.193;
 deny 45.84.107.101;
 deny 45.84.107.172;
 deny 45.84.107.182;
@@ -1581,7 +1582,6 @@ deny 5.181.80.107;
 deny 51.91.18.151;
 deny 5.196.95.34;
 deny 5.255.100.227;
-deny 5.255.100.26;
 deny 5.255.101.131;
 deny 5.255.103.235;
 deny 5.255.104.202;
@@ -1682,7 +1682,6 @@ deny 89.147.111.87;
 deny 89.221.215.139;
 deny 89.221.217.206;
 deny 89.234.157.254;
-deny 89.34.230.180;
 deny 89.58.26.216;
 deny 89.58.41.156;
 deny 91.132.144.59;
