--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -130,7 +130,6 @@ allow 136.244.111.163;
 allow 138.59.18.110;
 allow 139.99.172.11;
 allow 139.99.8.57;
-allow 141.147.97.190;
 allow 141.164.38.67;
 allow 141.98.11.62;
 allow 142.171.12.88;
@@ -160,7 +159,6 @@ allow 156.229.232.104;
 allow 156.229.232.108;
 allow 156.229.232.115;
 allow 156.229.232.54;
-allow 156.229.232.98;
 allow 156.229.233.92;
 allow 158.220.123.219;
 allow 158.69.252.116;
@@ -672,7 +670,7 @@ allow 195.80.151.242;
 allow 195.88.74.206;
 allow 198.144.178.185;
 allow 198.144.178.187;
-allow 198.167.206.252;
+allow 198.167.206.220;
 allow 198.251.84.163;
 allow 198.251.84.237;
 allow 198.251.88.18;
@@ -1147,7 +1145,6 @@ allow 2a05:b0c7:6388::1;
 allow 2a05:b0c7:655b::1;
 allow 2a05:b0c7:67c6::1;
 allow 2a05:b0c7:6949::1;
-allow 2a05:b0c7:6bd4::1;
 allow 2a05:b0c7:6cc4::1;
 allow 2a05:d014:1527:3400:fffe:9986:ac97:faeb;
 allow 2a05:f480:2800:1ee1:5400:5ff:fe16:c47a;
@@ -1371,6 +1368,7 @@ allow 2a0c:5700:3133:4000:be24:11ff:fe51:a829;
 allow 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 allow 2a0c:5cc0:1:1::293c:1518;
 allow 2a0c:e300::23;
+allow 2a0d:8140:1fff:4a9a::1;
 allow 2a0d:bbc7:0:1::1df;
 allow 2a0d:bbc7:0:1::254;
 allow 2a0d:bbc7:0:1::320;
@@ -1492,6 +1490,7 @@ allow 45.12.3.80;
 allow 45.128.133.242;
 allow 45.132.246.245;
 allow 45.134.225.36;
+allow 45.137.99.14;
 allow 45.138.16.107;
 allow 45.138.16.113;
 allow 45.138.16.178;
@@ -1682,6 +1681,7 @@ allow 89.147.111.87;
 allow 89.221.215.139;
 allow 89.221.217.206;
 allow 89.234.157.254;
+allow 89.34.230.180;
 allow 89.58.26.216;
 allow 89.58.41.156;
 allow 91.132.144.59;
