--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -130,7 +130,6 @@ deny 136.244.111.163;
 deny 138.59.18.110;
 deny 139.99.172.11;
 deny 139.99.8.57;
-deny 141.147.97.190;
 deny 141.164.38.67;
 deny 141.98.11.62;
 deny 142.171.12.88;
@@ -160,7 +159,6 @@ deny 156.229.232.104;
 deny 156.229.232.108;
 deny 156.229.232.115;
 deny 156.229.232.54;
-deny 156.229.232.98;
 deny 156.229.233.92;
 deny 158.220.123.219;
 deny 158.69.252.116;
@@ -672,7 +670,7 @@ deny 195.80.151.242;
 deny 195.88.74.206;
 deny 198.144.178.185;
 deny 198.144.178.187;
-deny 198.167.206.252;
+deny 198.167.206.220;
 deny 198.251.84.163;
 deny 198.251.84.237;
 deny 198.251.88.18;
@@ -1147,7 +1145,6 @@ deny 2a05:b0c7:6388::1;
 deny 2a05:b0c7:655b::1;
 deny 2a05:b0c7:67c6::1;
 deny 2a05:b0c7:6949::1;
-deny 2a05:b0c7:6bd4::1;
 deny 2a05:b0c7:6cc4::1;
 deny 2a05:d014:1527:3400:fffe:9986:ac97:faeb;
 deny 2a05:f480:2800:1ee1:5400:5ff:fe16:c47a;
@@ -1371,6 +1368,7 @@ deny 2a0c:5700:3133:4000:be24:11ff:fe51:a829;
 deny 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 deny 2a0c:5cc0:1:1::293c:1518;
 deny 2a0c:e300::23;
+deny 2a0d:8140:1fff:4a9a::1;
 deny 2a0d:bbc7:0:1::1df;
 deny 2a0d:bbc7:0:1::254;
 deny 2a0d:bbc7:0:1::320;
@@ -1492,6 +1490,7 @@ deny 45.12.3.80;
 deny 45.128.133.242;
 deny 45.132.246.245;
 deny 45.134.225.36;
+deny 45.137.99.14;
 deny 45.138.16.107;
 deny 45.138.16.113;
 deny 45.138.16.178;
@@ -1682,6 +1681,7 @@ deny 89.147.111.87;
 deny 89.221.215.139;
 deny 89.221.217.206;
 deny 89.234.157.254;
+deny 89.34.230.180;
 deny 89.58.26.216;
 deny 89.58.41.156;
 deny 91.132.144.59;
