--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -156,9 +156,9 @@ deny 154.16.116.61;
 deny 154.26.159.157;
 deny 156.229.232.101;
 deny 156.229.232.104;
-deny 156.229.232.108;
 deny 156.229.232.115;
 deny 156.229.232.54;
+deny 156.229.232.98;
 deny 156.229.233.92;
 deny 158.220.123.219;
 deny 158.69.252.116;
@@ -829,7 +829,6 @@ deny 205.185.123.93;
 deny 205.185.124.176;
 deny 205.185.127.231;
 deny 208.85.20.67;
-deny 209.135.168.90;
 deny 209.141.32.181;
 deny 209.141.32.198;
 deny 209.141.34.15;
@@ -871,7 +870,6 @@ deny 23.137.254.137;
 deny 23.153.248.33;
 deny 23.153.248.34;
 deny 23.154.177.10;
-deny 23.154.177.11;
 deny 23.154.177.12;
 deny 23.154.177.13;
 deny 23.154.177.14;
@@ -931,7 +929,6 @@ deny 2600:3c0a::f03c:95ff:fe5d:a877;
 deny 2602:2da:0:33:5054:ff:fe6c:39dc;
 deny 2602:2da:0:34:5054:ff:fe7e:7c21;
 deny 2602:2e5::104;
-deny 2602:f9f3:0:2::319;
 deny 2602:fc24:10:61b::1;
 deny 2602:fc24:12:81a6::1;
 deny 2602:fc24:12:9fef::1;
@@ -1141,10 +1138,10 @@ deny 2a05:541:110:20::1;
 deny 2a05:541:110:3e::1;
 deny 2a05:541:112:31::1;
 deny 2a05:541:122:49::1;
-deny 2a05:b0c7:6388::1;
 deny 2a05:b0c7:655b::1;
 deny 2a05:b0c7:67c6::1;
 deny 2a05:b0c7:6949::1;
+deny 2a05:b0c7:6bd4::1;
 deny 2a05:b0c7:6cc4::1;
 deny 2a05:d014:1527:3400:fffe:9986:ac97:faeb;
 deny 2a05:f480:2800:1ee1:5400:5ff:fe16:c47a;
