--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -12,7 +12,6 @@ set_real_ip_from 2001:41d0:304:200::3348;
 set_real_ip_from 2001:41d0:304:200::3ea4;
 set_real_ip_from 2001:41d0:304:200::9dce;
 set_real_ip_from 2001:41d0:601:1100::6524;
-set_real_ip_from 2001:41d0:700:10a2::;
 set_real_ip_from 2001:41d0:a:2a61::1;
 set_real_ip_from 2001:41d0:a:5c0::1;
 set_real_ip_from 2001:41d0:a:fe22::1;
@@ -298,7 +297,6 @@ set_real_ip_from 2a03:4000:66:15:18a0:6bff:fe90:3147;
 set_real_ip_from 2a03:4000:6:d042:5440:88ff:fedd:4ae5;
 set_real_ip_from 2a03:4000:6:e047:6494:62ff:fe3f:85b8;
 set_real_ip_from 2a03:4000:7:dcc:14ac:f2ff:fea9:e4c7;
-set_real_ip_from 2a03:6f20:531::254;
 set_real_ip_from 2a03:e600:100::1;
 set_real_ip_from 2a03:e600:100::2;
 set_real_ip_from 2a03:e600:100::3;
@@ -312,7 +310,6 @@ set_real_ip_from 2a03:e600:100::68;
 set_real_ip_from 2a03:e600:100::69;
 set_real_ip_from 2a03:e600:100::70;
 set_real_ip_from 2a03:e600:100::71;
-set_real_ip_from 2a03:f80:354:643f::1;
 set_real_ip_from 2a04:52c0:101:46a::;
 set_real_ip_from 2a04:52c0:102:46e0::1;
 set_real_ip_from 2a04:52c0:103:412::1;
@@ -334,6 +331,7 @@ set_real_ip_from 2a05:541:110:20::1;
 set_real_ip_from 2a05:541:110:3e::1;
 set_real_ip_from 2a05:541:112:31::1;
 set_real_ip_from 2a05:541:122:49::1;
+set_real_ip_from 2a05:b0c7:6388::1;
 set_real_ip_from 2a05:b0c7:655b::1;
 set_real_ip_from 2a05:b0c7:67c6::1;
 set_real_ip_from 2a05:b0c7:6949::1;
@@ -658,4 +656,5 @@ set_real_ip_from 2a12:a800:2:1:45:80:158:205;
 set_real_ip_from 2a12:a800:2:1:45:80:158:23;
 set_real_ip_from 2a12:a800:2:1:45:80:158:27;
 set_real_ip_from 2a12:a800:2:1:45:80:158:69;
+set_real_ip_from 2a13:7c00:3:12:f816:3eff:fea3:67db;
 set_real_ip_from 2a13:d207:0:461::1;
